<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="times">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="memorySave">MS</string>
    <string name="memoryRead">MR</string>
    <string name="memoryClear">MC</string>
    <string name="mc">MC</string>
    <string name="dec">.</string>
</resources>